--- a/1_langchain_crash_course/lanchain_crashcourse.ipynb
+++ b/1_langchain_crash_course/lanchain_crashcourse.ipynb
@@ -51,7 +51,7 @@
    ],
    "source": [
     "from langchain.llms import OpenAI\n",
-    "\n",
+    "# temp is the amount of creativity (closer to 1 less creative , less hallucination and less creativity, less bluffing)\n",
     "llm = OpenAI(temperature=0.9)\n",
     "name = llm.predict(\"I want to open a restaurant for Indian food. Suggest a fency name for this.\")\n",
     "print(name)"
@@ -878,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
